2009-01-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/treeviews.c:
   Disable documents popup menu items when invalid.
   Make close, save menu items work for all children when a parent row
   is selected.


2009-01-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c, src/utils.c:
   Skip disk changes detection for all remote files.
   Don't try to detect a remote file when running on old GLib versions
   without GIO (< 2.16).


2009-01-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/ui_utils.h, src/prefs.c, src/plugindata.h,
   src/treeviews.c, src/keyfile.c, geany.glade:
   Use tree for Documents sidebar, grouped by path.
   Remove Documents show full path pref.
   Use enum for documents tree store column ids.


2009-01-18  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/utils.c: Added a missing g_free().


2009-01-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetype_extensions.conf, data/filetypes.oms,
   scintilla/include/SciLexer.h, scintilla/include/Scintilla.iface,
   scintilla/KeyWords.cxx, scintilla/LexOMS.cxx, scintilla/Makefile.am,
   scintilla/makefile.win32, src/editor.c, src/filetypes.c,
   src/filetypes.h, src/highlighting.c, src/templates.c, wscript:
   Remove filetype O-Matrix (probably unused for years).
 * src/keybindings.c, src/keybindings.h:
   Reorder some keybindings.
 * src/dialogs.c, src/document.c, src/document.h, src/documentprivate.h,
   src/plugindata.h, src/plugins.c, plugins/geanyfunctions.h:
   Add document_save_file_as and document_rename_file to the plugin API.
   If GIO is available, use GFileMonitor to watch for file disk changes
   and indicate them immediately using an orange tab label colour.
   Break plugin ABI for this and the last commits.
 * src/build.c:
   Disable the Build menu item in the Build toolbar button explicitly
   for LaTeX files.